--- a/index.html
+++ b/index.html
@@ -1,26 +1,101 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+  <!DOCTYPE html>
+  <html lang="pt-br">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flex-box</title>
-  <link rel="stylesheet" href="/css/estilo.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flex-box</title>
+    <link rel="stylesheet" href="/css/estilo.css">
+  </head>
 
-<body>
-  <div id="container">
-    <div id="menu">
-      <ul>
-        <li class="item"><a href="/index.html">01</a></li>
-        <li class="item"><a href="/02.html">02</a></li>
-        <li class="item"><a href="/03.html">03</a></li>
-      </ul>
+  <body>
+    <div id="container">
+      <div id="menu">
+        <ul>
+          <li class="item"><a href="/index.html">01</a></li>
+          <li class="item"><a href="/02.html">02</a></li>
+          <li class="item"><a href="/03.html">03</a></li>
+        </ul>
+      </div>
+      <div id="layout">
+
+     <div id="layout">
+        <div class="tabuleiro">
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+        <div class="casa escuro"></div>
+        <div class="casa claro"></div>
+      </div>
+
+      </div>
     </div>
-    <div id="layout">
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
-    </div>
-  </div>
-</body>
+  </body>
 
-</html>
+  </html>
