--- a/02.html
+++ b/02.html
@@ -18,8 +18,15 @@
       </ul>
     </div>
     <div id="layout">
+      <div class="quadro">
+      <div class="quadrado b1">20vh</div>
+      <div class="quadrado b2">30vh</div>
+      <div class="quadrado b3">15vh</div>
+      <div class="quadrado b4">35vh</div>
+      <div class="quadrado b5">50vh</div>
+      <div class="quadrado b6">20vh</div>
+    </div>
 
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
     </div>
   </div>
 </body>
