--- a/03.html
+++ b/03.html
@@ -18,8 +18,13 @@
       </ul>
     </div>
     <div id="layout">
+      <div class="cabecalho">Cabeçalho</div>
+      <div class="menu">Menu</div>
+      <div class="artigo1">Artigo</div>
+      <div class="artigo2">Artigo</div>
+      <div class="rodape">Rodapé</div>
+    </div>
 
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
     </div>
   </div>
 </body>
