--- a/02.html
+++ b/02.html
@@ -18,16 +18,13 @@
       </ul>
     </div>
     <div id="layout">
-      <div class="quadro">
-      <div class="quadrado b1">20vh</div>
-      <div class="quadrado b2">30vh</div>
-      <div class="quadrado b3">15vh</div>
-      <div class="quadrado b4">35vh</div>
-      <div class="quadrado b5">50vh</div>
-      <div class="quadrado b6">20vh</div>
-    </div>
-
-    </div>
+        <div class="bloco height20 align">20vh</div>
+        <div class="bloco height-30 align">30vh</div>
+        <div class="bloco height-15 align">15vh</div>
+        <div class="bloco height-35 align">35vh</div>
+        <div class="bloco height-50 align">50vh</div>
+        <div class="bloco height-20 align">20vh</div>
+  </div>
   </div>
 </body>
 
