--- a/03.html
+++ b/03.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div id="container" class="l3">
     <div id="menu">
       <ul>
         <li class="item"><a href="/index.html">01</a></li>
@@ -18,14 +18,22 @@
       </ul>
     </div>
     <div id="layout">
-      <div class="cabecalho">Cabeçalho</div>
-      <div class="menu">Menu</div>
-      <div class="artigo1">Artigo</div>
-      <div class="artigo2">Artigo</div>
-      <div class="rodape">Rodapé</div>
-    </div>
+      <div class="l3">
+        <div class="vermelhocima">
+          <div class="verdeesquerdo">
+            <div class="azulcima">Cabeçalho</div>
+            <div class="azulbaixo">
+              <div class="amarelo">Artigo</div>
+              <div class="amarelo">Artigo</div>
+            </div>
+          </div>
+          <div class="verdedireito">Menu</div>
+        </div>
 
+        <div class="vermelhobaixo">Rodapé</div>
+      </div>
     </div>
+  </div>
   </div>
 </body>
 
